<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.Pagamento.Pagamento">

    <TextView
        android:id="@+id/txtPrechecimentoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tela_pagamento"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/hint_bairro"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_rua_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/hint_rua_numero"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLines="1" />
    <EditText
        android:id="@+id/edit_cidade_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/hint_cidade_estado"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLines="1"
       />
    <EditText
        android:id="@+id/edit_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:hint="@string/hint_celular"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="11"
      />

    <Button
        android:id="@+id/bt_fazerPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_fazer_pagamento"
        android:textAllCaps="false"
       android:layout_margin="20dp"
        android:textSize="20sp"
        android:padding="15dp"
        android:backgroundTint="@color/dark_blue"
        android:textStyle="bold"
        android:textColor="@color/white" />



</LinearLayout>